fixed layout on mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,9 @@
     .display-1{
         font-size: 3rem;
     }
+    .news-letter{
+        text-align: center;
+    }
 
 }
 
