--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,3 +10,19 @@ margin: 0px;
 .items{
     padding: 0.5rem 0;
 }
+
+.title{
+    justify-content: start;
+}
+@media only screen and (max-width: 768px) {
+    .title{
+        justify-content: center;
+    }
+    .email{
+        width: 100%;
+        div{
+            justify-content: center;
+        }
+    }
+
+}
